--- a/business.html
+++ b/business.html
@@ -4,21 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Can CC Test</title>
+  <title>Canadian Credit Card Comparison Tool</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body">
+<div class="header">
+  <div>Credit Card Comparison Canada</div>
+  <div><a href="apmr.html">Credit Card Comparison Tool</a></div>
+  <div><a href="amexplatinum.html">Credit Card Comparison Tool</a></div>
+</div>
 <h1><center>R/ChurningCanada Credit Card Comparison</center></h1>
-<h2><center><a href="index.html">Aeroplan/Membership Rewards</a>&nbsp &nbsp &nbsp<a href="tier2.html">Other Points</a>&nbsp &nbsp &nbsp<a href="business.html">Business Cards</a></center></h2>
+<h2><center><a href="apmr.html">Aeroplan/Membership Rewards</a>&nbsp &nbsp &nbsp<a href="other.html">Other Points</a>&nbsp &nbsp &nbsp<a href="business.html">Business Cards</a></center></h2>
 <h3><center>Business Cards are meant for Businesses/Business Owners</center></h3>
 <h4><center>All points types available for Businesses are below</center></h4>
+</div>  
   <div class="container">
     <table>
       <thead>
+        <th colspan="16">
+          <div class="tableTitle">
+            <div>Business Cards</div>
+            <div><i class="fa-solid fa-plane-departure fa-2xl"></i></div>
+            <div>Credit Card Comparison</div>
+            <div><i class="fa-solid fa-plane-arrival fa-2xl"></i></div>
+            <div><button class="refresh" onClick="window.location.reload();">Refresh Sheet</button></div>
+          </div>
+        </th>
         <tr>
-          <th data-sort onclick="sortTable(0, this)">Card</th>
+          <th width="20%" data-sort onclick="sortTable(0, this)">Card</th>
           <th data-sort onclick="sortTable(1, this)">Fee</th>
           <th data-sort onclick="sortTable(2, this)">Point Type</th>
           <th data-sort onclick="sortTable(3, this)">Total Point Bonus</th>
@@ -31,9 +46,8 @@
           <th data-sort onclick="sortTable(10, this)">Spend Per Month</th>
           <th data-sort onclick="sortTable(11, this)">Cash Value per Minimum Spend Requirement</th>
           <th data-sort onclick="sortTable(12, this)">Personal Income</th>
-          <th data-sort onclick="sortTable(12, this)">Household Income</th>
           <th>Perks</th>
-          <th>Notes</th>
+          <th>Offer</th>
           <th></th>
         </tr>
       </thead>
@@ -44,9 +58,27 @@
       </tbody>
       <tbody>
         <tr>
+          <td class="card-name"><a href="https://www.americanexpress.com/ca/en/charge-cards/small-business-gold-card/?linknav=ca-en-amex-cardshop-details-browse-americanExpressBusinessGoldRewardsCard" target="_blank">Amex Marriott Bonvoy Business</a></td>
+          <td>$150</td>
+          <td><div id="tooltipPoint"><span id="tooltipTextpoint">Mariott Bonvoy</span><span id="pointText">MB</span></div></td>
+          <td><div class="hide">18</div>50,000</td>
+          <td><div class="hide">20</div>50,000</td>
+          <td><div class="hide">19</div>$450</td>
+          <td><div class="hide">05</div>$0</td>
+          <td><div class="hide">13</div>$300</td>
+          <td><div class="hide">12</div>$1,500</td>
+          <td><div class="hide">9</div>3</td>
+          <td><div class="hide">12</div>$500</td>
+          <td><div class="hide">13</div>0.6</td>
+          <td><div class="hide">07</div>$0</td>
+          <td><div id="tooltipTablefour"><span id="tooltipTexttable">1 Free Night after 1st year, Improved status at Mariott properties</span><span id="hotelText">H</span></div></td>
+          <td><a href="https://www.greatcanadianrebates.ca/details/Amex-Marriott-Bonvoy-Business/" target="_blank">GCR</a>/Ref</td>
+          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-l"></i></span></td>
+        </tr>                                 
+        <tr>
           <td class="card-name"><a href="https://www.americanexpress.com/ca/en/charge-cards/small-business-gold-card/?linknav=ca-en-amex-cardshop-details-browse-americanExpressBusinessGoldRewardsCard" target="_blank">Amex Gold Business</a></td>
           <td>$199</td>
-          <td>Membership Rewards</td>
+          <td><div id="tooltipPoint"><span id="tooltipTextpoint">Membership Rewards</span><span id="pointText">MR</span></div></td>
           <td><div class="hide">30</div>110,000</td>
           <td><div class="hide">27</div>70,000</td>
           <td><div class="hide">29</div>$700</td>
@@ -57,15 +89,14 @@
           <td><div class="hide">25</div>$1,666</td>
           <td><div class="hide">18</div>0.38</td>
           <td><div class="hide">11</div>$0</td>
-          <td><div class="hide">11</div>$0</td>
           <td></td>
-          <td>GCR Rebate?!</td>
-          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-2xl"></i></span></td>
+          <td><a href="https://www.greatcanadianrebates.ca/details/Amex-Business-Gold/" target="_blank">GCR</a>/Ref</td>
+          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-l"></i></span></td>
         </tr>
         <tr>
           <td class="card-name"><a href="https://www.americanexpress.com/en-ca/credit-cards/edge-business/" target="_blank">Amex Business Edge</a></td>
           <td>$100</td>
-          <td>Membership Rewards</td>
+          <td><div id="tooltipPoint"><span id="tooltipTextpoint">Membership Rewards</span><span id="pointText">MR</span></div></td>
           <td><div class="hide">25</div>67,000</td>
           <td><div class="hide">24</div>55,000</td>
           <td><div class="hide">25</div>$550</td>
@@ -76,15 +107,14 @@
           <td><div class="hide">26</div>$1,666</td>
           <td><div class="hide">20</div>0.27</td>
           <td><div class="hide">12</div>$0</td>
-          <td><div class="hide">12</div>$0</td>
-          <td>10x points on specific purchases up to 10,000 extra points</td>
-          <td>GCR Rebate?!</td>
-          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-2xl"></i></span></td>
+          <td><div id="tooltipTablefour"><span id="tooltipTexttable">10x points on specific purchases up to 10,000 extra points</span><span id="pointsText">P</span></div></td>
+          <td>Ref</td>
+          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-l"></i></span></td>
         </tr>
         <tr>
           <td class="card-name"><a href="https://www.americanexpress.com/en-ca/business/credit-cards/business-platinum-card/" target="_blank">Amex Business Platinum</a></td>
           <td>$499</td>
-          <td>Membership Rewards</td>
+          <td><div id="tooltipPoint"><span id="tooltipTextpoint">Membership Rewards</span><span id="pointText">MR</span></div></td>
           <td><div class="hide">27</div>80,000</td>
           <td><div class="hide">29</div>80,000</td>
           <td><div class="hide">30</div>$800</td>
@@ -95,15 +125,14 @@
           <td><div class="hide">30</div>$2,000</td>
           <td><div class="hide">25</div>0.23</td>
           <td><div class="hide">15</div>$0</td>
-          <td><div class="hide">15</div>$0</td>
-          <td>Unlimited Lounge Access, Status at Hotels, AMEX offers</td>
-          <td>GCR Rebate?!</td>
-          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-2xl"></i></span></td>
+          <td><div id="tooltipTableseven"><span id="tooltipTexttable">Unlimited Lounge Access, Nexus Credit, Travel Credit, Status at Hotels, YYZ Benefits, Amex Offers</span><span id="loungeText">L</span><span id="creditText">N</span><span id="hotelText">H</span><span id="airportText">A</span></div></td>
+          <td><a href="https://www.greatcanadianrebates.ca/details/Amex-Business-Platinum/" target="_blank">GCR</a>/Ref</td>
+          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-l"></i></span></td>
         </tr>
         <tr>
-          <td class="card-name"><a href="https://www.bmo.com/main/business/credit-cards/bmo-airmiles-world-elite-business-mastercard/" target="_blank">BMO Air Miles World Elite Business Mastercard</a></td>
-          <td>$0 - First Year Free</td>
-          <td>Air Miles</td>
+          <td class="card-name"><a href="https://www.bmo.com/main/business/credit-cards/bmo-airmiles-world-elite-business-mastercard/" target="_blank">BMO AM WE Business Mastercard</a></td>
+          <td>$0*</td>
+          <td><div id="tooltipPoint"><span id="tooltipTextpoint">Air Miles</span><span id="pointText">AM</span></div></td>
           <td><div class="hide">06</div>3,000</td>
           <td><div class="hide">07</div>3,000</td>
           <td><div class="hide">13</div>$375</td>
@@ -114,14 +143,13 @@
           <td><div class="hide">28</div>$1,666</td>
           <td><div class="hide">26</div>0.23</td>
           <td><div class="hide">16</div>$0</td>
-          <td><div class="hide">16</div>$0</td>
           <td></td>
-          <td>GCR Rebate?!</td>
-          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-2xl"></i></span></td>
+          <td></td>
+          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-l"></i></span></td>
         </tr>
         <tr>
           <td class="card-name"><a href="https://www.tangerine.ca/en/products/spending/creditcard" target="_blank">TD Business Aeroplan Visa</a></td>
-          <td>$0 - First Year Free</td>
+          <td>$0*</td>
           <td>Aeroplan</td>
           <td><div class="hide">23</div>60,000</td>
           <td><div class="hide">12</div>30,000</td>
@@ -133,10 +161,9 @@
           <td><div class="hide">29</div>$1,666</td>
           <td><div class="hide">28</div>0.18</td>
           <td><div class="hide">17</div>$0</td>
-          <td><div class="hide">17</div>$0</td>
-          <td>Nexus Credit</td>
-          <td>GCR Rebate?!</td>
-          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-2xl"></i></span></td>
+          <td><div id="tooltipPoint"><span id="tooltipTextpoint">Nexus Credit</span><span id="creditText">N</span></div></td>
+          <td></td>
+          <td class="del"><span onclick="delRow(this)"><i class="fa-solid fa-trash fa-l"></i></span></td>
         </tr>
       </tbody>
     </table>
