--- a/apmr.html
+++ b/apmr.html
@@ -14,7 +14,7 @@
 <div class="header">
   <div>Credit Card Comparison Canada</div>
   <div><a href="apmr.html">Credit Card Comparison Tool</a></div>
-  <div><a href="amexplatinum.html">Credit Card Comparison Tool</a></div>
+  <div><a href="amexplatinum.html">Credit Card Benefit List</a></div>
 </div>
 <div class="main">
   <h1><center>R/ChurningCanada Credit Card Comparison</center></h1>
